--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,11 @@ requests = "^2.32.3"
 pytest = "^8.2.2"
 pytest-cov = "^5.0.0"
 
+
+[tool.poetry.group.lint.dependencies]
+mypy = "^1.10.1"
+black = "^24.4.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
